# fridac

./: .gitignore  ADVANCED_FEATURES.md  CUSTOM_SCRIPTS_DEMO.md  CUSTOM_SCRIPTS_GUIDE.md  EARLY_HOOKS_GUIDE.md  FEATURE_SUMMARY.md  HOOKNATIVE_USAGE_GUIDE.md  INSTALL.md  JOB_MANAGEMENT.md  JOB_MANAGEMENT_SUMMARY.md  MANIFEST.in  PROJECT_CLEANUP_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RPC_FIXES_SUMMARY.md  SMALLTRACE_ANALYSIS_GUIDE.md  TASK_MANAGEMENT_GUIDE.md  TASK_SYSTEM_GUIDE.md  TROUBLESHOOTING.md  check_function_exports.py  comprehensive_test.py  demo_new_task_system.md  early_hooks.json  final_system_check.py  final_verification.py  frida_advanced_tracer.js  frida_common.js  frida_common_new.js  frida_job_commands.js  frida_job_manager.js  frida_location_hooks.js  frida_location_hooks_new.js  frida_native_common.js  frida_okhttp_logger.js  frida_universal_hook_example.js  fridac  fridac_legacy  pyproject.toml  requirements.txt  (+14 more)
binaries/: README.md
frida_native/: frida_native_analysis.js  frida_native_anti_debug.js  frida_native_core.js  frida_native_crypto.js  frida_native_file_proc.js  frida_native_jni.js  frida_native_linker.js  frida_native_network.js  frida_native_stalker.js  frida_native_suite.js
fridac_core/: TODO.md  __init__.py  arm64dbi.py  cli.py  completer.py  custom_scripts.py  device_manager.py  environment.py  ghidra_bridge.py  logger.py  script_manager.py  script_templates.py  session.py  smalltrace.py  task_manager.py
scripts/: jni_hook_encryptString.js  network_monitor.js  smalltrace_active.js  smalltrace_jni_active.js  (+2 more)
(+49 files in other folders)
