[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fridac"
version = "1.0.0"
description = "专业级 Frida Hook 工具集 - 集成 Java/Native/定位 Hook"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6.8"
authors = [
    {name = "fridac team"}
]
keywords = ["frida", "hook", "android", "ios", "reverse-engineering", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "frida>=14.0.0",
]

[project.optional-dependencies]
rich = ["rich>=10.0.0"]
full = ["rich>=10.0.0", "esprima>=4.0.0"]

[project.scripts]
fridac = "fridac_core.cli:main"

[project.urls]
Homepage = "https://github.com/cxapython/fridac"
Repository = "https://github.com/cxapython/fridac"

[tool.setuptools]
packages = ["fridac_core"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.js", "*.json"]

